Upgate api declaration
